apps/base/nginx/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    ns: default
