apps/base/nginx/backend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: backend
  name: backend
spec:
  containers:
    - image: nginx
      name: backend
