apps/base/nginx/frontend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: frontend
  name: frontend
spec:
  containers:
    - image: nginx
      name: frontend
