apps/base/nginx/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    # kustomize.toolkit.fluxcd.io/name: apps
    # kustomize.toolkit.fluxcd.io/namespace: flux-system
    run: backend
  name: backend
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    # kustomize.toolkit.fluxcd.io/name: apps
    # kustomize.toolkit.fluxcd.io/namespace: flux-system
    run: backend
